--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <ul class="navbar-nav ml-auto order-1">
 <!--                <li class="nav-item"><a class="nav-link" href="https://project.mhzhou.com/vico/">Full Dataset</a></li>-->
 <!--                <li class="nav-item"><a class="nav-link" href="https://arxiv.org/abs/2112.13548">Paper</a></li>-->
-                <li class="nav-item"><a class="nav-link" href="https://github.com/cmivqa/NLPCC-2023-Shared-Task-5">Code</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/Lireanstar/ACMMM2024_MMIVQA">Code</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://github.com/WENGSYX/CMIVQA_Baseline">Baseline</a></li>
             </ul>
         </div>
@@ -108,10 +108,10 @@
                     </p>
                     -->
                     <p class="card-text">
-                        The team constitution (members of a team) cannot be changed after the evaluation period has begun. Individuals and teams with top submissions will present their work at the workshop. We also encourage every team to upload a paper (See <a href="http://tcci.ccf.org.cn/conference/2023/cfpt.php">Paper Submission Guidelines</a>) that briefly describes their system. If there are any questions, please let us know by raising an issue.
+                        The team constitution (members of a team) cannot be changed after the evaluation period has begun. Individuals and teams with top submissions will present their work at the workshop. We also encourage every team to upload a paper that briefly describes their system. If there are any questions, please let us know by raising an issue.
                                             </p>
                     <p class="card-text">
-                        If there are any questions, please let us know by <a href="https://github.com/cmivqa/NLPCC-2023-Shared-Task-5/issues">raising an issue</a>.
+                        If there are any questions, please let us know by <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA/issues">raising an issue</a>.
                     </p>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                     <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA">https://github.com/Lireanstar/ACMMM2024_MMIVQA</a>.
                         </br>
                         </br>
-                        Our baseline is released in <a href="https://github.com/cmivqa/NLPCC-2023-Shared-Task-5">https://github.com/WENGSYX/CMIVQA_Baseline</a>. Any original methods (language/vision/audio/mutlimodal etc.) are welcome.
+                        Our baseline method will be released in <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA">https://github.com/WENGSYX/CMIVQA_Baseline</a>. Any original methods (language/vision/audio/mutlimodal etc.) are welcome.
                    </p>
 <!--                    <p>-->
 <!--                        <a data-toggle="collapse" href="#collapseExample">-->
@@ -423,7 +423,7 @@
 <!--                            <li><strong>lip sync (speaker only)</strong>: AV offset and AV confidence (SyncNet)</li>-->
 <!--                            <li><strong>lip landmark distance</strong>: L1 distance of lip landmarks</li>-->
                         </ul>
-                        Scripts can be accessed from <a href="https://github.com/cmivqa/NLPCC-2023-Shared-Task-5" target="_blank">this github repo</a>.
+                        Scripts can be accessed from <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA" target="_blank">this github repo</a>.
                         Baseline can be accessed from <a href="https://github.com/WENGSYX/CMIVQA_Baseline" target="_blank">this github repo</a>.
                     </p>
                 </div>
@@ -439,53 +439,40 @@
                         </div>
                       </div>
                     <p class="card-text">
-                        <b>Signup to receive updates</b>: using <a href="http://tcci.ccf.org.cn/conference/2023/dldoc/NLPCC2023.SharedTask5.RegistrationForm.doc">this form</a>
+                        <b>Signup to receive updates</b>: using <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA/blob/main/ACMMM%202024%20MMIVQA%20Grand%20Challenge%20Agreement.docx">this form</a>
                     </p>
                     <p>The submission deadline is at 11:59 p.m. of the stated deadline date (UTC/GMT+08:00).</p> </br>
-                    <p>The results of test set A are updated every 7 days in Monday for 6 weeks (until May 21, 2023). Then the test set B will be released for the final evaluation. Participants can submit their results to the competition organizer via <a href="libincn@hnu.edu.cn">E-mail</a> for result registration, and each team does not exceed 3 submissions per day.</p>
+                    <p>The results of test set A are updated every 3 days (until June 28, 2024). Then the test set B will be released for the final evaluation. Participants can submit their results to the competition organizer via <a href="libincn@hnu.edu.cn">E-mail</a> for result registration, and each team does not exceed 3 submissions per day.</p>
                     <table class="table table-striped table-bordered">
                         <tbody>
                           <tr>
                             <td>Announcement of shared tasks and Registration open for participation</td>
-                            <td>March 15, 2023</td>
+                            <td>March 15, 2024</td>
                           </tr>
                           <tr>
                             <td>Release of detailed task guidelines & training data</td>
-                            <td>April 3, 2023</td>
+                            <td>April 3, 2024</td>
                           </tr>
                           <tr>
                             <td>Release of Test A data</td>
-                            <td>April 10, 2023</td>
+                            <td>April 20, 2024</td>
                           </tr>
                           <tr>
                             <td>Registration deadline (Same as the Test B submission deadline)</td>
-                            <td>May 28, 2023</td>
+                            <td>June 28, 2024</td>
                           </tr>
                           <tr>
                             <td>Release of test B data</td>
-                            <td>May 21, 2023</td>
+                            <td>June 28, 2024</td>
                           </tr>
                           <tr>
                             <td>Participants’ final result submission (Test B) deadline:</td>
-                            <td>May 28, 2023</td>
-                          </tr>
-                          <tr>
-                            <td>Evaluation results release and call for system reports and conference paper</td>
-                            <td>June 10, 2023</td>
+                            <td>July 5, 2024</td>
                           </tr>
                           <tr>
                             <td>Conference paper submission deadline (only for shared tasks)</td>
-                            <td>June 30, 2023</td>
+                            <td>July 12, 2024</td>
                           </tr>
-                          <tr>
-                            <td>Conference paper accept/reject notification</td>
-                            <td>July 18, 2023</td>
-                          </tr>
-                          <tr>
-                            <td>Camera-ready paper submission deadline</td>
-                            <td>August 1, 2023</td>
-                          </tr>
-
                         </tbody>
                     </table>
                 </div>
