--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA">https://github.com/Lireanstar/ACMMM2024_MMIVQA</a>.
                         </br>
                         </br>
-                        Our baseline method will be released in <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA">https://github.com/WENGSYX/CMIVQA_Baseline</a>. Any original methods (language/vision/audio/mutlimodal etc.) are welcome.
+                        Our baseline method will be released in <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA">https://github.com/WENGSYX/CMIVQA_Baseline</a>. Any original methods (language/vision/audio/multimodal etc.) are welcome.
                    </p>
 <!--                    <p>-->
 <!--                        <a data-toggle="collapse" href="#collapseExample">-->
@@ -260,11 +260,11 @@
                     All the Train & Dev files include videos, audio, and the corresponding subtitles. The video and the corresponding audio come from Youtube Chinese medical channel,
                     which is obtained by using <a href="https://github.com/pytube">Pytube</a> tools. The subtitle are generated from the <a href="https://github.com/openai/whisper">Whisper</a>, which contains Simplified Chinese and Traditional Chinese tokens.
                     In order to unify the character types of questions and subtitles, we converted the above both into simplified Chinese. As for competition benchmarks, we recommend references [<a href="#ref1">1</a>-<a href="#ref2">2</a>], [<a href="#ref6">6</a>] as strong baselines. Beginners can quickly learn about the content of relevant competitions through references [<a href="#ref3">3</a>-<a href="#ref4">4</a>].
-                    The Test A set and baseline are released, and any original methods (language/vision/audio/mutlimodal etc.) are welcome.
+                    The Test A set and baseline are released, and any original methods (language/vision/audio/multimodal etc.) are welcome.
 
                         <!--                        <strong>Validation Set:</strong> <a> To be published around May 20th</a><br/>-->
 <!--                        <em>Note: For Train Set, data in <code>listening_head.zip</code> contains the data in <code>talking_head.zip</code>.</em><br/>-->
-<!--                        <u><strong><em>**Note:</em></strong></u> Except for the driver part, all other parts (e.g. render) can use additional data, but teams need to declare the pretrained model or additional data used when submission. For example, the use of a Talking Head Generation data is not allowed, but the use of pretrained data / model to adjust the render is allowed.-->
+<!--                        <u><strong><em>**Note:</em></strong></u> Except for the driver part, all other parts (e.g. render) can use additional data, but teams need to declare the pretrained model or additional data used when submission. For example, the use of human labeled data is not allowed, but the use of pretrained data / model to be finetuned is allowed.-->
                     </p>
                     <h5>Guidelines</h5>
 <!--                    <p class="card-text">-->
