--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 
                 <h3 class="display-5 text-bold">Multilingual Medical Instructional Video Question Answering Challenge</h3>
-                <h5 class="text-regular">held in ACM MULTIMEDIA 2024</h5>
+                <h5 class="text-regular">held in NLPCC 2024</h5>
                                 <img src="./img_cmivqa/logo_mmivqa_big.svg" width=100%>
             </div>
             
