--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" type="image/svg+xml" href="./img_cmivqa/logo_nlpcc2024.png" sizes="any">
+    <link rel="icon" type="image/svg+xml" href="./img_cmivqa/logo2.svg" sizes="any">
 
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 <!-- 插入公式 -->
@@ -37,14 +37,14 @@
                 <li class="nav-item"><a class="nav-link" href="#award">Award</a></li>
                 <li class="nav-item"><a class="nav-link" href="#organizers">Organizers</a></li>
                 <li class="nav-item"><a class="nav-link" href="#reference">Reference</a></li>
-                <li class="nav-item"><a class="nav-link" href="./leaderboard.html">LeaderboardA</a></li>
-                <li class="nav-item"><a class="nav-link" href="./leaderboardb.html">LeaderboardB</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="./leaderboard.html">Leaderboard2023</a></li> -->
+                <!-- <li class="nav-item"><a class="nav-link" href="./leaderboardb.html">LeaderboardB</a></li> -->
 <!--                TODO leaderboard-->
             </ul>
             <ul class="navbar-nav ml-auto order-1">
 <!--                <li class="nav-item"><a class="nav-link" href="https://project.mhzhou.com/vico/">Full Dataset</a></li>-->
 <!--                <li class="nav-item"><a class="nav-link" href="https://arxiv.org/abs/2112.13548">Paper</a></li>-->
-                <li class="nav-item"><a class="nav-link" href="https://github.com/Lireanstar/ACMMM2024_MMIVQA">Code</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/Lireanstar/NLPCC2024_MMIVQA">Code</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://github.com/WENGSYX/CMIVQA_Baseline">Baseline</a></li>
             </ul>
         </div>
@@ -59,7 +59,7 @@
                 
                 <h3 class="display-5 text-bold">Multilingual Medical Instructional Video Question Answering Challenge</h3>
                 <h5 class="text-regular">held in NLPCC 2024</h5>
-                                <img src="./img_cmivqa/logo_mmivqa_big.svg" width=100%>
+                                <img src="./img_cmivqa/mmivqa.png" width=100%>
             </div>
             
             <br>
@@ -111,7 +111,7 @@
                         The team constitution (members of a team) cannot be changed after the evaluation period has begun. Individuals and teams with top submissions will present their work at the workshop. We also encourage every team to upload a paper that briefly describes their system. If there are any questions, please let us know by raising an issue.
                                             </p>
                     <p class="card-text">
-                        If there are any questions, please let us know by <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA/issues">raising an issue</a>.
+                        If there are any questions, please let us know by <a href="https://github.com/Lireanstar/NLPCC2024_MMIVQA/issues">raising an issue</a>.
                     </p>
                 </div>
             </div>
@@ -132,10 +132,10 @@
 <center><h6><br>Fig. 4 Dataset examples of the MMIVQA shared task.</h6></center>
                     <p class="card-text">
                     The videos for this competition are crawled from the medical instructional channels on the YouTube website, where the subtitles (Both in Chinese and English) are obtained from the corresponding video. The question and corresponding temporal answer are manually labeled by annotators with the medical background. Each video may contain several questions-answer pairs, where the questions with the same semantic meanings correspond to a unique answer. The dataset is split into a training set, a validation set, and a test set. During the grand challenge, the test set along with the true “id” data number is not available to the public. The Fig. 4 shows the dataset examples for the mTAGV task. The “id” is the sample number that is used for the video retrieval track. The “video_id” means the unique ID from YouTube. The “Chinese_question” item is written manually by Chinese medical experts. The “English_question” is translated and corrected by native English-speaking doctors. The “start and end second” represents the temporal answer from the corresponding video. We also provide the video captions automatically generated from the video, including Chinese (Ch_caption) and English (Eng_caption) versions. As a result, our final goal is to retrieve the target video ID from the test corpus, and then locate the visual answer. More details about the dataset as well as the download links can be found in
-                    <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA">https://github.com/Lireanstar/ACMMM2024_MMIVQA</a>.
+                    <a href="https://github.com/Lireanstar/NLPCC2024_MMIVQA">https://github.com/Lireanstar/NLPCC2024_MMIVQA</a>.
                         </br>
                         </br>
-                        Our baseline method will be released in <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA">https://github.com/WENGSYX/CMIVQA_Baseline</a>. Any original methods (language/vision/audio/multimodal etc.) are welcome.
+                        Our baseline method will be released in <a href="https://github.com/Lireanstar/NLPCC2024_MMIVQA">https://github.com/WENGSYX/CMIVQA_Baseline</a>. Any original methods (language/vision/audio/multimodal etc.) are welcome.
                    </p>
 <!--                    <p>-->
 <!--                        <a data-toggle="collapse" href="#collapseExample">-->
@@ -212,11 +212,12 @@
                     </div>
                     <p class="card-text">
 <!--                        <strong>Train+Valid+Test Set:</strong> <a href="https://1drv.ms/u/s!Ag220j2nXkVswCSUXjTP_cA3Y0y2?e=9b3VXA" target="_blank">OneDrive</a><br/>-->
-                        <strong>Train & Validation Set:</strong> <a href="https://pan.baidu.com/s/1eN_mo3iHyyHVH_8dciElqA?pwd=9871">BaiduNetDisk</a> | <a href="https://drive.google.com/drive/folders/1QbY8DEaVLkY2w6vOCWAs4ZQFHgJ3q8ui?usp=sharing">GoogleDrive</a><br/>
+                        <strong>Train & Validation Set:</strong> <a href="TODO"B>aiduNetDisk</a> | <a href="TODO">GoogleDrive</a><br/>
+                        <!-- <strong>Train & Validation Set:</strong> <a href="https://pan.baidu.com/s/1eN_mo3iHyyHVH_8dciElqA?pwd=9871">BaiduNetDisk</a> | <a href="https://drive.google.com/drive/folders/1QbY8DEaVLkY2w6vOCWAs4ZQFHgJ3q8ui?usp=sharing">GoogleDrive</a><br/> -->
+
 <!--                         <strong>Test Set A:</strong> <a href="https://pan.baidu.com/s/1XxoQ-KwUy9qf3Z0RfaPTaw?pwd=9874">BaiduNetDisk</a> | <a href="https://drive.google.com/drive/folders/1Fdll0Qn8Ol65Z91u51NOEpBoxAQlrXN4?usp=sharing">GoogleDrive</a> <br/> -->
 <!--                         <strong>Test Set A Target:</strong> <a href="https://pan.baidu.com/s/1t52p6Wq-Fk5HRJGjUfDP_Q?pwd=2023">BaiduNetDisk</a> | <a href="https://drive.google.com/drive/folders/1ibAKKlYMKXePEVA7p9ftRwiwSq0ytWOV?usp=sharing">GoogleDrive</a> <br/> -->
 <!--                     <strong>Test Set B:</strong> <a href="https://pan.baidu.com/s/1Z7wV76Yd2SDlVOUBkIafoQ?pwd=9871">BaiduNetDisk</a> | <a href="https://pan.baidu.com/s/1x3GRvKCMGcAFintmoSOuvw?pwd=9871">BaiduNetDisk_Backup</a> | <a href="https://drive.google.com/drive/folders/1QkddCTyeXYwO-gTtlC5r0e4M47Bdsclo?usp=sharing">GoogleDrive</a><br/> -->
-
                     <h5>Statistics</h5>
                     <center>
                    <table class="table table-striped table-bordered" style="text-align: center">
@@ -229,13 +230,20 @@
                             <td>Question Avg. Len.</td>
                             <td>Video Avg. Len.</td>
                         </tr>
-                        <tr>
+                        <!-- 
                             <td>Train &amp; Dev</td>
                             <td>1,228</td>
                             <td>2,937</td>
                             <td>3,125</td>
                             <td>17.16</td>
                             <td>263.3</td>
+                        </tr -->
+                            <td>Train &amp; Dev</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>-</td>
                         </tr>
 <!--                         <tr>
                             <td>Test A</td>
@@ -423,7 +431,7 @@
 <!--                            <li><strong>lip sync (speaker only)</strong>: AV offset and AV confidence (SyncNet)</li>-->
 <!--                            <li><strong>lip landmark distance</strong>: L1 distance of lip landmarks</li>-->
                         </ul>
-                        Scripts can be accessed from <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA" target="_blank">this github repo</a>.
+                        Scripts can be accessed from <a href="https://github.com/Lireanstar/NLPCC2024_MMIVQA" target="_blank">this github repo</a>.
                         Baseline can be accessed from <a href="https://github.com/WENGSYX/CMIVQA_Baseline" target="_blank">this github repo</a>.
                     </p>
                 </div>
@@ -439,69 +447,41 @@
                         </div>
                       </div>
                     <p class="card-text">
-                        <b>Signup to receive updates</b>: using <a href="https://github.com/Lireanstar/ACMMM2024_MMIVQA/blob/main/ACMMM%202024%20MMIVQA%20Grand%20Challenge%20Agreement.docx">this form</a>
+                        <b>Signup to receive updates</b>: using <a href="http://tcci.ccf.org.cn/conference/2024/dldoc/NLPCC2024.SharedTask7.RegistrationForm.doc">this form</a>
                     </p>
                     <p>The submission deadline is at 11:59 p.m. of the stated deadline date (UTC/GMT+08:00).</p> </br>
-                    <p>The results of test set A are updated every 3 days (until June 28, 2024). Then the test set B will be released for the final evaluation. Participants can submit their results to the competition organizer via <a href="libincn@hnu.edu.cn">E-mail</a> for result registration, and each team does not exceed 3 submissions per day.</p>
+                    <p>During the training and verification phases, we released the complete data set (including corresponding labels) for the participating teams to freely choose their models. During the test set release phase, we will release additional test sets and will maintain the frequency of updating the online list every day. Participants can submit their results to the competition organizer via <a href="libincn@hnu.edu.cn">E-mail</a> for result registration, and each team does not exceed 5 submissions in total.</p>
                     <table class="table table-striped table-bordered">
                         <tbody>
                           <tr>
                             <td>Announcement of shared tasks and Registration open for participation</td>
-                            <td>March 15, 2024</td>
+                            <td>March 25, 2024</td>
                           </tr>
                           <tr>
                             <td>Release of detailed task guidelines & training data</td>
-                            <td>April 3, 2024</td>
+                            <td>April 15, 2024</td>
                           </tr>
                           <tr>
-                            <td>Release of Test A data</td>
-                            <td>April 20, 2024</td>
+                            <td>Release of test data</td>
+                            <td>June 11, 2024</td>
                           </tr>
                           <tr>
-                            <td>Registration deadline (Same as the Test B submission deadline)</td>
-                            <td>June 28, 2024</td>
+                            <td>Test submission deadline</td>
+                            <td>June 20, 2024</td>
                           </tr>
                           <tr>
-                            <td>Release of test B data</td>
-                            <td>June 28, 2024</td>
+                            <td>Registration deadline (Same as the Test submission deadline)</td>
+                            <td>June 20, 2024</td>
                           </tr>
                           <tr>
-                            <td>Participants’ final result submission (Test B) deadline:</td>
-                            <td>July 5, 2024</td>
-                          </tr>
-                          <tr>
-                            <td>Conference paper submission deadline (only for shared tasks)</td>
-                            <td>July 12, 2024</td>
+                            <td>Evaluation results release and call for system reports and conference paper</td>
+                            <td>June 30, 2024</td>
                           </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
 
-
-            <div class="card cardx" id="award">
-                <div class="card-body">
-                    <div class="media">
-                        <embed src="./img_cmivqa/award.svg" type="image/svg+xml" class="mr-3 align-self-center" width=40/>
-                        <div class="media-body">
-                          <h5 class="mt-0-vico">Award</h5>
-
-                          Awards will be granted to the top 3 teams. Every track has three prizes (￥3000, ￥2000, ￥1000), where all prizes count ￥18000.
-                        </div>
-                        </div>
-                          The top 1 participating team in each track will be certificated by NLPCC and CCF-NLP. Cash rewards are granted for the top-3 teams for each track.
-                            </br>
-                            </br>
-                            The first prize (*1): ￥3000
-                            </br>
-                            The second prize (*1): ￥2000
-                            </br>
-                            The third  prize (*1): ￥1000
-                    </br>
-                    </br>
-                    The final interpretation right of the award belongs to Hunan University.
-                </div>
-            </div>
 
 
             <div class="card cardx" id="organizers">
@@ -515,25 +495,25 @@
                       </div>
                     <div class="row">
                     <div class="col orgnizer-box">
-                            <img src="./img_cmivqa/li.jpg" class="rounded-circle orgnizer-img" width=100/>
-                            <p class="orgnizer-text">Shutao Li<br>College of Electrical and Information Engineering, Hunan University</p>
+                            <img src="./img_cmivqa/zhou.jpg" class="rounded-circle orgnizer-img" width=108/>
+                            <p class="orgnizer-text">Shoujun Zhou<br>Shenzhen Institute of Advanced Technology, Chinese Academy of Sciences</p>
                     </div>
-                        <div class="col orgnizer-box">
-                            <img src="./img_cmivqa/sunbin.jpg" class="rounded-circle orgnizer-img" width=100/>
-                            <p class="orgnizer-text">Bin Sun<br>College of Electrical and Information Engineering, Hunan University</p>
-                        </div>
 
                         <div class="col orgnizer-box">
-                            <img src="./img_cmivqa/libin.png" class="rounded-circle orgnizer-img" width=100/>
+                            <img src="./img_cmivqa/libin.png" class="rounded-circle orgnizer-img" width=109/>
                             <p class="orgnizer-text">Bin Li<br>College of Electrical and Information Engineering, Hunan University</p>
                         </div>
                         <div class="col orgnizer-box">
-                            <img src="./img_cmivqa/yixuan.jpg" class="rounded-circle orgnizer-img" width=95/>
-                            <p class="orgnizer-text">Yixuan Weng<br>National Laboratory of Pattern Recognition Institute of Automation, CAS</p>
+                            <img src="./img_cmivqa/song.jpg" class="rounded-circle orgnizer-img" width=105/>
+                            <p class="orgnizer-text">Qiya Song<br>Hunan Normal University</p>
                         </div>
+<!--                         <div class="col orgnizer-box">
+                            <img src="./img_cmivqa/sunbin.jpg" class="rounded-circle orgnizer-img" width=100/>
+                            <p class="orgnizer-text">Bin Sun<br>College of Electrical and Information Engineering, Hunan University</p>
+                        </div> -->
                         <div class="col orgnizer-box">
-                            <img src="./img_cmivqa/guohu.jpg" class="rounded-circle orgnizer-img" width=100/>
-                            <p class="orgnizer-text">Hu Guo<br>College of Electrical and Information Engineering, Hunan University</p>
+                            <img src="./img_cmivqa/min.jpg" class="rounded-circle orgnizer-img" width=95/>
+                            <p class="orgnizer-text">Xianwen Min<br>College of Electrical and Information Engineering, Hunan University</p>
                         </div>
                 </div>
             </div>
