--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                         </div> -->
                         <div class="col orgnizer-box">
                             <img src="./img_cmivqa/min.jpg" class="rounded-circle orgnizer-img" width=95/>
-                            <p class="orgnizer-text">Xianwen Min<br>College of Electrical and Information Engineering, Hunan University</p>
+                            <p class="orgnizer-text">Xianwen Min<br>School of Robotics, Hunan University</p>
                         </div>
                 </div>
             </div>
