--- a/index.html
+++ b/index.html
@@ -239,7 +239,23 @@
                             <td>17.16</td>
                             <td>263.3</td>
                         </tr -->
-                            <td>Train &amp; Dev</td>
+                            <td>Train Set</td>
+                            <td>1228</td>
+                            <td>5840</td>
+                            <td>6582</td>
+                            <td>17.16</td>
+                            <td>6.97</td>
+                        </tr>
+                         <tr>
+                            <td>Dev Set</td>
+                            <td>200</td>
+                            <td>492</td>
+                            <td>2171</td>
+                            <td>17.81</td>
+                            <td>6.97</td>
+                        </tr>
+                        <tr>
+                            <td>Test Set</td>
                             <td>-</td>
                             <td>-</td>
                             <td>-</td>
