--- a/index.html
+++ b/index.html
@@ -228,15 +228,17 @@
                             <td>Videos</td>
                             <td>QA pairs</td>
                             <td>Vocab Nums</td>
-                            <td>Question Avg. Len.</td>
+                            <td>Ch_Question Avg. Len.</td>
+                              <td>Eng_Question Avg. Len.</td>
                             <td>Video Avg. Len.</td>
                         </tr>
                         <!-- 
                             <td>Train &amp; Dev</td>
                             <td>1,228</td>
-                            <td>2,937</td>
-                            <td>3,125</td>
+                            <td>5840</td>
+                            <td>6582</td>
                             <td>17.16</td>
+                            <td>6.97</td>
                             <td>263.3</td>
                         </tr -->
                             <td>Train Set</td>
@@ -244,18 +246,20 @@
                             <td>5840</td>
                             <td>6582</td>
                             <td>17.16</td>
+                            <td>6.97</td>
                             <td>263.3</td>
                         </tr>
                          <tr>
                             <td>Dev Set</td>
                             <td>200</td>
-                            <td>492</td>
-                            <td>2171</td>
-                            <td>17.81</td>
+                            <td>983</td>
+                            <td>1743</td>
+                            <td>7.26</td>
                             <td>242.4</td>
                         </tr>
                         <tr>
                             <td>Test Set</td>
+                            <td>-</td>
                             <td>-</td>
                             <td>-</td>
                             <td>-</td>
