--- a/leaderboard.html
+++ b/leaderboard.html
@@ -76,11 +76,23 @@
                         <td>R@1,IoU=0.5</td>
                         <td>R@1,IoU=0.7</td>
                                   <td><b>mIoU(R@1)</b></td>
-
-
                        <tr>
 
                             <td>1 </td>
+                            <td>2024/6/18</td>
+                            <td>Ouc_AI</td>
+                            <td>The Open University of China</td>
+                            <td><font color="red">=-</font></td>
+                            <td><font color="red">46.8688</font></td>
+                            <td><font color="red">30.9197</font></td>
+                            <td><font color="red">17.9061</font></td>
+                            <td><b><font color="red">33.4271</font></b></td>
+
+                        </tr>
+
+                       <tr>
+
+                            <td>2 </td>
                             <td>2024/5/10</td>
                             <td>-</td>
                             <td>-</td>
