--- a/leaderboard.html
+++ b/leaderboard.html
@@ -82,11 +82,11 @@
                             <td>2024/6/18</td>
                             <td>Ouc_AI</td>
                             <td>The Open University of China</td>
-                            <td><font color="red">=-</font></td>
-                            <td><font color="red">46.8688</font></td>
-                            <td><font color="red">30.9197</font></td>
-                            <td><font color="red">17.9061</font></td>
-                            <td><b><font color="red">33.4271</font></b></td>
+                            <td><font color="black">-</font></td>
+                            <td><font color="black">46.8688</font></td>
+                            <td><font color="black">30.9197</font></td>
+                            <td><font color="black">17.9061</font></td>
+                            <td><b><font color="black">33.4271</font></b></td>
 
                         </tr>
 
