--- a/leaderboard.html
+++ b/leaderboard.html
@@ -86,7 +86,7 @@
                             <td><font color="black">0.4689</font></td>
                             <td><font color="black">0.3092</font></td>
                             <td><font color="black">0.1791</font></td>
-                            <td><b><font color="black">0.3342</font></b></td>
+                            <td><font color="black">0.3342</font></td>
 
                         </tr>
 
