--- a/leaderboard.html
+++ b/leaderboard.html
@@ -79,20 +79,33 @@
                        <tr>
 
                             <td>1 </td>
-                            <td>2024/6/19</td>
+                            <td>2024/6/20</td>
                             <td>Ouc_AI</td>
                             <td>The Open University of China</td>
                             <td><font color="black">-</font></td>
-                            <td><font color="black">0.4667</font></td>
-                            <td><font color="black">0.3277</font></td>
-                            <td><font color="black">0.2006</font></td>
-                            <td><font color="black">0.3498</font></td>
+                            <td><font color="black">0.5088</font></td>
+                            <td><font color="black">0.3542</font></td>
+                            <td><font color="black">0.2054</font></td>
+                            <td><font color="black">0.3637</font></td>
 
                         </tr>
 
                        <tr>
 
                             <td>2 </td>
+                            <td>2024/6/20</td>
+                            <td>SETAG</td>
+                            <td>-</td>
+                            <td><font color="black">-</font></td>
+                            <td><font color="black">0.4775</font></td>
+                            <td><font color="black">0.3209</font></td>
+                            <td><font color="black">0.1898</font></td>
+                            <td><font color="black">0.3389</font></td>
+
+                        </tr>
+                       <tr>
+
+                            <td>3 </td>
                             <td>2024/5/10</td>
                             <td>-</td>
                             <td>-</td>
