--- a/leaderboard.html
+++ b/leaderboard.html
@@ -95,7 +95,7 @@
                             <td>2 </td>
                             <td>2024/6/20</td>
                             <td>SETAG</td>
-                            <td>-</td>
+                            <td>Fudan University</td>
                             <td><font color="black">-</font></td>
                             <td><font color="black">0.4775</font></td>
                             <td><font color="black">0.3209</font></td>
@@ -136,10 +136,21 @@
                             <td><b>Overall</b></td>
                             </tr>
                                
-
-
                             <tr>
                                 <td>1</td>
+                                <td>2024/6/20</td>
+                                <td>XD</td>
+                                <td>-</td>
+                                <td><font color="red">-</font></td>
+                                <td><font color="red">0.3121</font></td>
+                                <td><font color="red">0.4078</font></td>
+                                <td><font color="red">0.4966</font></td>
+                                <td><font color="red">0.3245</font></td>
+                                <td><font color="red">1.5410</font></td>
+                            </tr>
+
+                            <tr>
+                                <td>2</td>
                                 <td>2024/5/10</td>
                                 <td>-</td>
                                 <td>-</td>
@@ -167,7 +178,18 @@
                             <td>R@50|mIoU</td>
                             <td><b>Average</b></td>
                         </tr>
+ <tr>
+                            <td>1</td>
+                            <td>2024/6/20</td>
+                            <td>UCLAB</td>
+                            <td>-</td>
+                            <td><font color="red">-</font></td>
+                            <td><font color="red">0.1141</font></td>
+                            <td><font color="red">0.2343</font></td>
+                            <td><font color="red">0.3098</font></td>
+                            <td><font color="red">0.2200</font></td>
 
+                         </tr>
 
                         <tr>
                             <td>1</td>
@@ -179,6 +201,7 @@
                             <td><font color="red">0.0397</font></td>
                             <td><font color="red">0.0509</font></td>
                             <td><b><font color="red">0.0291</font></b></td>
+                            
                          </tr>
 
                         </tbody>
