--- a/leaderboard.html
+++ b/leaderboard.html
@@ -140,7 +140,7 @@
                                 <td>1</td>
                                 <td>2024/6/20</td>
                                 <td>XD</td>
-                                <td>-</td>
+                                <td>HIT</td>
                                 <td><font color="red">-</font></td>
                                 <td><font color="red">0.3121</font></td>
                                 <td><font color="red">0.4078</font></td>
