--- a/leaderboard.html
+++ b/leaderboard.html
@@ -141,12 +141,12 @@
                                 <td>2024/6/20</td>
                                 <td>XD</td>
                                 <td>HIT</td>
-                                <td><font color="red">-</font></td>
-                                <td><font color="red">0.3121</font></td>
-                                <td><font color="red">0.4078</font></td>
-                                <td><font color="red">0.4966</font></td>
-                                <td><font color="red">0.3245</font></td>
-                                <td><font color="red">1.5410</font></td>
+                                <td><font color="black">-</font></td>
+                                <td><font color="black">0.3121</font></td>
+                                <td><font color="black">0.4078</font></td>
+                                <td><font color="black">0.4966</font></td>
+                                <td><font color="black">0.3245</font></td>
+                                <td><font color="black">1.5410</font></td>
                             </tr>
 
                             <tr>
@@ -183,11 +183,11 @@
                             <td>2024/6/20</td>
                             <td>UCLAB</td>
                             <td>-</td>
-                            <td><font color="red">-</font></td>
-                            <td><font color="red">0.1141</font></td>
-                            <td><font color="red">0.2343</font></td>
-                            <td><font color="red">0.3098</font></td>
-                            <td><font color="red">0.2200</font></td>
+                            <td><font color="black">-</font></td>
+                            <td><font color="black">0.1141</font></td>
+                            <td><font color="black">0.2343</font></td>
+                            <td><font color="black">0.3098</font></td>
+                            <td><font color="black">0.2200</font></td>
 
                          </tr>
 
