--- a/leaderboard.html
+++ b/leaderboard.html
@@ -106,6 +106,33 @@
                        <tr>
 
                             <td>3 </td>
+                            <td>2024/6/20</td>
+                            <td>SETAG</td>
+                            <td>YNU</td>
+                            <td><font color="black">-</font></td>
+                            <td>BIGG<font color="black">0.4099</font></td>
+                            <td><font color="black">0.2863</font></td>
+                            <td><font color="black">0.1544</font></td>
+                            <td><font color="black">0.2977</font></td>
+
+                        </tr>
+                       <tr>
+
+                            <td>4 </td>
+                            <td>2024/6/20</td>
+                            <td>PIPINSTALL</td>
+                            <td>SEU</td>
+                            <td><font color="black">-</font></td>
+                            <td>BIGG<font color="black">0.4055</font></td>
+                            <td><font color="black">0.2911</font></td>
+                            <td><font color="black">0.1454</font></td>
+                            <td><font color="black">0.2898</font></td>
+
+                        </tr>
+                         
+                       <tr>
+
+                            <td>5 </td>
                             <td>2024/5/10</td>
                             <td>-</td>
                             <td>-</td>
