--- a/leaderboard.html
+++ b/leaderboard.html
@@ -110,7 +110,7 @@
                             <td>SETAG</td>
                             <td>YNU</td>
                             <td><font color="black">-</font></td>
-                            <td>BIGG<font color="black">0.4099</font></td>
+                            <td><font color="black">0.4099</font></td>
                             <td><font color="black">0.2863</font></td>
                             <td><font color="black">0.1544</font></td>
                             <td><font color="black">0.2977</font></td>
@@ -123,7 +123,7 @@
                             <td>PIPINSTALL</td>
                             <td>SEU</td>
                             <td><font color="black">-</font></td>
-                            <td>BIGG<font color="black">0.4055</font></td>
+                            <td><font color="black">0.4055</font></td>
                             <td><font color="black">0.2911</font></td>
                             <td><font color="black">0.1454</font></td>
                             <td><font color="black">0.2898</font></td>
@@ -219,7 +219,7 @@
                          </tr>
 
                         <tr>
-                            <td>1</td>
+                            <td>2</td>
                             <td>2024/5/10</td>
                             <td>-</td>
                             <td>-</td>
