--- a/leaderboard.html
+++ b/leaderboard.html
@@ -107,7 +107,7 @@
 
                             <td>3 </td>
                             <td>2024/6/20</td>
-                            <td>SETAG</td>
+                            <td>BIGG</td>
                             <td>YNU</td>
                             <td><font color="black">-</font></td>
                             <td><font color="black">0.4099</font></td>
