--- a/leaderboard.html
+++ b/leaderboard.html
@@ -166,8 +166,8 @@
                             <tr>
                                 <td>1</td>
                                 <td>2024/6/20</td>
-                                <td>XD</td>
-                                <td>HIT</td>
+                                <td>sun</td>
+                                <td>CTGC</td>
                                 <td><font color="black">-</font></td>
                                 <td><font color="black">0.3121</font></td>
                                 <td><font color="black">0.4078</font></td>
@@ -208,8 +208,8 @@
  <tr>
                             <td>1</td>
                             <td>2024/6/20</td>
-                            <td>UCLAB</td>
-                            <td>-</td>
+                            <td>IIEleven</td>
+                            <td>CAS</td>
                             <td><font color="black">-</font></td>
                             <td><font color="black">0.1141</font></td>
                             <td><font color="black">0.2343</font></td>
