--- a/leaderboard.html
+++ b/leaderboard.html
@@ -209,7 +209,7 @@
                             <td>1</td>
                             <td>2024/6/20</td>
                             <td>IIEleven</td>
-                            <td>CAS</td>
+                            <td>Chinese Academy of Sciences University</td>
                             <td><font color="black">-</font></td>
                             <td><font color="black">0.1141</font></td>
                             <td><font color="black">0.2343</font></td>
