--- a/leaderboard.html
+++ b/leaderboard.html
@@ -167,13 +167,25 @@
                                 <td>1</td>
                                 <td>2024/6/20</td>
                                 <td>sun</td>
-                                <td>CTGC</td>
+                                <td>CETC</td>
                                 <td><font color="black">-</font></td>
                                 <td><font color="black">0.3121</font></td>
                                 <td><font color="black">0.4078</font></td>
                                 <td><font color="black">0.4966</font></td>
                                 <td><font color="black">0.3245</font></td>
                                 <td><font color="black">1.5410</font></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>2024/6/20</td>
+                                <td>GEN</td>
+                                <td>-</td>
+                                <td><font color="black">-</font></td>
+                                <td><font color="black">0.1311</font></td>
+                                <td><font color="black">0.1074</font></td>
+                                <td><font color="black">0.0978</font></td>
+                                <td><font color="black">0.1142</font></td>
+                                <td><font color="black">0.4505</font></td>
                             </tr>
 
                             <tr>
