--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                     <br/><b>Note:</b> The main ranking of this track is based on the Average score. The Average score is calculated by averaging the R@1|mIoU, R@10|mIoU, R@50|mIoU scores, which is shown as follows.
                     where A and B represent different spans.<br/>
                      $$
-                    \text { Average }=\frac{1}{|M'|} \sum_{i=1}^{|M'|} \frac{1}{\text { Value}_i}
+                    \text { Average }=\frac{1}{|M'|} \sum_{i=1}^{|M'|} {\text { Value}_i}
                     $$
                          where the |<i>M</i><sup>'</sup>| is the number of the evaluation metrics. Value<sub>i</sub> is the value of the i-th metric (i.e., R@1|mIoU, R@10|mIoU, R@50|mIoU), |<i>M</i><sup>'</sup>|=3.
 <!--                            <li><strong>generation quality (image level)</strong>: SSIM, CPBD, PSNR</li>-->
